--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,12 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 50px;
+}
+@media screen and (max-width: 850px) {
+  .center {
+    margin-top: 5%;
+  }
 }
 .box {
   border-radius: 27px;
